---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupToolchain(system)" ]
    2 [ label="SyncProject(system, client)" ]
    3 [ label="SyncProject(system, server)" ]
    4 [ label="SyncProject(system, common)" ]
    5 [ label="SyncProject(system, base)" ]
    6 [ label="RunTask(client:build)" ]
    7 [ label="RunTask(server:build)" ]
    8 [ label="RunTask(common:build)" ]
    1 -> 0 [ ]
    3 -> 1 [ ]
    5 -> 1 [ ]
    4 -> 1 [ ]
    4 -> 5 [ ]
    2 -> 1 [ ]
    2 -> 3 [ ]
    2 -> 4 [ ]
    7 -> 3 [ ]
    8 -> 4 [ ]
    6 -> 2 [ ]
    6 -> 7 [ ]
    6 -> 8 [ ]
}
